2023-09-07T00:37:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6103922841 # 3785
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-09-07
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2788 / 0 2789 / +0 +1

2023-09-06T12:15:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6096916369 # 3782
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-09-06
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2786 / 0 2788 / +0 +2

2023-09-06T08:10:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6094451466 # 3781
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-09-06
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2785 / 0 2786 / +0 +1

2023-09-05T08:10:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6081929811 # 3775
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-09-05
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2784 / 0 2785 / +0 +1

2023-09-04T16:10:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6075688718 # 3771
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-09-04
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2783 / 0 2784 / +0 +1

2023-09-03T16:08:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6065505616 # 3765